<resources>
    <string name="app_name">alperenugus_A3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    
    <string name="permission_not_granted">We must access your location to plot where you are</string>
    <string name="menu_map">Map</string>
    <string name="menu_history">History</string>
    <string name="menu_forecast">Forecast</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    
    <string name="checked_in"><b>Checked In:</b></string>
    <string name="latitude"><b>Latitude:</b></string>
    <string name="longitude"><b>Longitude:</b></string>
    <string name="temperature"><b>Temperature:</b></string>
    <string name="weather"><b>Weather:</b></string>

    <string name="date">Date</string>
    <string name="forecast_description">Description</string>
    <string name="refresh_forecast">Refresh Forecast</string>
    <string name="current_location">Current Location</string>
    <string name="last_updated">Last Updated</string>
    <string name="location_not_set">You should first locate yourself in the map!</string>
    
    <string name="name"><b>WeatherTrackr</b></string>
    <string name="developed_by"><b>Developed By:</b></string>
    <string name="studio">Alp Studios</string>
    <string name="version"><b>Version</b></string>
    <string name="alpha">Alpha - 0.0.1</string>
    <string name="about"><b>About</b></string>
    <string name="about_long">This app will query the weather at your current location when you press the Floating Action Button
    (FAB). Your location is plotted to a map. Clicking the marker will display the time at that location and weather at that time
    of check in. This information is presented to you in the form of a Snackbar at the bottom of the screen.</string>

    <string name="save_database">Save Locations to Database</string>
    <string name="delete_database">Delete Database</string>
    <string name="sure">Are you sure to delete database?</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
</resources>
