<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/mapFragment"
            android:title="@string/menu_map" />

        <item
            android:id="@+id/historyFragment"
            android:title="@string/menu_history" />

        <item
            android:id="@+id/forecastFragment"
            android:title="@string/menu_forecast" />

        <item
            android:id="@+id/settingsFragment"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/aboutFragment"
            android:title="@string/menu_about" />


    </group>
</menu>
