<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_margin="5dp"
        android:textSize="50dp"
        android:gravity="center"
        android:padding="20dp">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developed_by"
        android:layout_margin="5dp"
        android:textSize="20dp"
        android:gravity="center"
        android:padding="5dp">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/studio"
        android:layout_margin="5dp"
        android:textSize="15dp"
        android:gravity="center"
        android:padding="5dp">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:layout_margin="5dp"
        android:textSize="20dp"
        android:gravity="center"
        android:padding="5dp">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alpha"
        android:layout_margin="5dp"
        android:textSize="15dp"
        android:gravity="center"
        android:padding="5dp">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:layout_margin="5dp"
        android:textSize="20dp"
        android:gravity="center"
        android:padding="5dp">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_long"
        android:layout_margin="5dp"
        android:textSize="15dp"
        android:gravity="center"
        android:padding="5dp">
    </TextView>


</LinearLayout>